--- a/gym-frontend/package.json
+++ b/gym-frontend/package.json
@@ -15,7 +15,11 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.11",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
@@ -48,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-modal": "^3.16.3"
   }
 }
